...
                child: Column(
                  children: [
                    // Wrap Text with DefaultTextStyle
                    DefaultTextStyle(
                      style: jerseyStyle(48, Color(0xFFFFFFFF)),
                      child: Text(
                        'Discussion Forum',
                        textAlign: TextAlign.center,
                      ),
                    ),
                    const SizedBox(height: 10),
                    DefaultTextStyle(
                      style: jerseyStyle(24, Color(0xFFFFFFFF)),
...
                ),
              ),
              const SizedBox.shrink(),
              const SizedBox(height: 10),
              const SizedBox(height: 20),
              ElevatedButton(
                key: const Key('bootupPage4NextButton'),
                style: ElevatedButton.styleFrom(
                  backgroundColor: Color(0xFFFFFFFF),
                  shape: const CircleBorder(),
                  padding: const EdgeInsets.all(24.0),
                ),
                onPressed: () {
...
