...
  double caloriesIntake = 2000; // in kcal

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text('Diet Tracker'),
        flexibleSpace: Container(
          decoration: BoxDecoration(
            gradient: LinearGradient(
              colors: [Colors.red.shade900, Colors.yellow.shade800],
            ),
          ),
...
              Expanded(
                child: Column(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    _DietButton(
                      icon: Icons.restaurant,
                      label: 'Log Meal',
                      gradient: LinearGradient(
                        colors: [Colors.red[700]!, Colors.orange[700]!],
                      ),
                      onPressed: () async {
                        final result = await Navigator.push(
                          context,
...
        ),
        child: Padding(
          padding: EdgeInsets.all(24),
          child: Column(
            children: [
              _MealOptionCard(
                title: 'Custom',
                color: Colors.red[400]!,
                onTap:
                    () => Navigator.push(
                      context,
                      MaterialPageRoute(builder: (_) => CustomMealScreen()),
                    ),
...
                    shape: RoundedRectangleBorder(
                      borderRadius: BorderRadius.circular(15),
                    ),
                  ),
                  onPressed: _saveMeal,
                  child: Text(
                    'Save Meal',
                    style: TextStyle(fontSize: 18, color: Colors.white),
                  ),
                ),
              ],
            ),
          ),
...
